--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=ULL-ESIT-INF-DSI-2122_ull-esit-inf-dsi-21-22-prct12-music-api-grupo_r
-sonar.organization=ull-esit-inf-dsi-2122
+sonar.projectKey=marcocabrerahdez_API-Rest
+sonar.organization=marcocabrerahdez
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=ull-esit-inf-dsi-21-22-prct12-music-api-grupo_r
+sonar.projectName=API-Rest
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
